--- a/applications/kr8sswordz-pages/src/styles/molecules/_molecules.scss
+++ b/applications/kr8sswordz-pages/src/styles/molecules/_molecules.scss
@@ -1,9 +1,9 @@
-@import './cell';
-@import './superscript-number';
-@import './button-row';
-@import './instance-box';
-@import './data-flow-arrow';
-@import './image-column';
-@import './puzzle';
-@import './slider-container';
-@import './loader';
+@use './cell';
+@use './superscript-number';
+@use './button-row';
+@use './instance-box';
+@use './data-flow-arrow';
+@use './image-column';
+@use './puzzle';
+@use './slider-container';
+@use './loader';
