--- a/applications/kr8sswordz-pages/src/styles/organisms/_organisms.scss
+++ b/applications/kr8sswordz-pages/src/styles/organisms/_organisms.scss
@@ -2,6 +2,6 @@
 //
 // Styleguide 2.0.0
 
-@import './header',
-  './instance-grid',
-  './puzzle-container';
+@use './header';
+@use './instance-grid';
+@use './puzzle-container';
