--- a/applications/kr8sswordz-pages/src/styles/utils/_typography.scss
+++ b/applications/kr8sswordz-pages/src/styles/utils/_typography.scss
@@ -1,5 +1,8 @@
+//@use './variables';
+@use './variables' as *;
+@use 'sass:math';
+
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800';
-@import './variables';
 
 // Roboto Font
 @font-face {
@@ -37,8 +40,10 @@
   font-family: 'Roboto';
   src: url('../../assets/fonts/Roboto-Bold-webfont.eot');
   src: url('../../assets/fonts/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('../../assets/fonts/Roboto-Bold-webfont.woff') format('woff'),
-    url('../../assets/fonts/Roboto-Bold-webfont.ttf') format('truetype'),
+    url('../../src/assets/fonts/Roboto-Bold-webfont.woff') format('woff'),
+    url('../../src/assets/fonts/Roboto-Bold-webfont.ttf') format('truetype'),
+    // url('../../src/assets/fonts/Roboto-Bold-webfont.woff') format('woff'),
+    // url('../../src/assets/fonts/Roboto-Bold-webfont.ttf') format('truetype'),
     url('../../assets/fonts/Roboto-Bold-webfont.svg') format('svg');
   font-weight: 600;
 }
@@ -54,7 +59,7 @@
   font-style: italic;
 }
 
-@import './variables';
+
 
 h1,
 h2,
@@ -82,7 +87,7 @@ $header-count: 6;
 
 // Loop through h tags to assign relational font size and bottom margin
 @for $i from 1 through $header-count {
-    $header-font-size: $max-header-font-size - ( ($i - 1) / $header-count);
+    $header-font-size: $max-header-font-size - math.div(($i - 1), $header-count);
     h#{$i},
     .h#{$i} {
         font-size: $header-font-size;
